# roottest

root/roofitstats/: CMakeLists.txt  PDFTests.h  testVectorisedPDFs.cxx
root/roofitstats/LHCb/: LHCb001_D0MassFit.py  LHCb002_JohnsonGaussModel.C  LHCb002_JohnsonGaussModel_optimised.C
root/roofitstats/LHCb/LHCb002/: data.root  params.txt  params_good.txt
root/roofitstats/vectorisedPDFs/: CMakeLists.txt  VectorisedPDFTests.cxx  VectorisedPDFTests.h  testAddPdf.cxx  testArgusBG.cxx  testBernstein.cxx  testBifurGauss.cxx  testBreitWigner.cxx  testBukin.cxx  testCBShape.cxx  testChebychev.cxx  testCompatMode.cxx  testExponential.cxx  testGamma.cxx  testGauss.cxx  testJohnson.cxx  testLandau.cxx  testLegendre.cxx  testNestedPDFs.cxx  testPoisson.cxx  testPolynomial.cxx  testProductPdf.cxx
